Revision history for Perl extension Starch.

{{$NEXT}}

 - Require perl 5.8 per Minilla.
 - Simplify VERSION declarations.

0.10 2019-02-14T19:40:15Z

 - Remove Test::Fatal usage from one test.
 - Migrate build tooling from Dist::Zilla to Minilla.

0.09 2018-09-04

 - Migrate all the tests from Test::More to Test2::V0.
 - A bunch of little POD edits to make readers happier.

0.08 2018-09-03

 - Move Starch::Manual POD into Starch.
 - Rework the manual DESCRIPTION to be less pretentious and more useful.
 - Change the module one-liner from some weird esoteric thing to something
   talking about sessions.

0.07 2018-05-17

 - Stop hiding packages from indexing.
 - Some doc fixes to the manual. @IsmailKerim
 - Use MooX::MethodProxyArgs.
 - Some minor documentation cleanup.

0.06 2015-07-31

 - Move the TimeoutStore plugin to a separate distribution.

0.05 2015-07-27

 - Use the short store name when logging store exceptions.
 - Simplified the state lifecycle methods a bit and modified them to be a
   little less opinionated.
 - Plugins can now more reliably extend BUILD via method modifiers.
 - Make sure the TimeoutStore alarm is cleared when an exception is thrown.
 - Use alarm instead of Time::HiRes::Alarm for the TimeoutStore plugin,
   as sub-second alarms cause more unpredictable issues than they are worth.

0.04 2015-07-21

 - Update state's in_store if the store did not find any data.  This
   should provide some minor performance improvements and correct
   behavior.
 - Moved the hash_seed and generate_id methods into the manager.
 - Renamed invalid key to no_store key, which means its named
   after what it causes rather than what it is used for (an anti-
   pattern of sorts, but this key will be used for more general
   purpose stuff).
 - Added a mark_dirty method to state.
 - Moved stringify_key and key_separator from manager to store.
 - Increase test coverage.

0.03 2015-07-20

 - Better Carp handling by setting Starch modules as Internal so that