@@ -4,6 +4,7 @@ requires 'namespace::clean' => '0.24';
 requires 'Moo' => '2.000000';
 requires 'Type::Tiny' => '1.000005';
 requires 'Module::Runtime' => '0.014';
+requires 'Module::Find' => '0.11';
 requires 'Log::Any' => '1.03';
 requires 'Try::Tiny' => '0.18';
 requires 'MooX::BuildArgs' => '0.02';
